feat: Production-ready Trend Analysis Engine v3.0
- Add trend_analyzer.py with comprehensive analysis:
  - Rolling MAD anomaly detection
  - Weighted linear regression for channels
  - Fractal pivot detection with confirmation status
  - Pivot-based RSI divergence
  - OBV volume confirmation
  - Conflict detection with penalty
  - Symbol-specific weights (NASDAQ vs XAUUSD)
  - Slope deadzone for noise filtering
  - Multi-timeframe support

- Add technical_indicators.py:
  - EMA, RSI, ATR with proper warmup periods
  - Data cleaning and validation

- Add analysis_cache.py for in-memory caching

- Update ml_service.py: Remove hardcoded mock values
- Update routers to use async trend analyzer
- Update frontend: SIGNAL -> TREND ANALYSIS
- Add i18n translations for trend analysis

--- a/frontend/lib/i18n/translations/en.json
+++ b/frontend/lib/i18n/translations/en.json
@@ -286,6 +286,17 @@
     "trend": "Trend",
     "support": "Support",
     "volatility": "Volatility"
+  },
+  "trendAnalysis": {
+    "title": "TREND ANALYSIS",
+    "trendStrength": "Trend Strength",
+    "confidence": "Confidence",
+    "bullish": "BULLISH",
+    "bearish": "BEARISH",
+    "neutral": "NEUTRAL",
+    "volatility": "Volatility",
+    "volumeConfirmed": "Volume Confirmed",
+    "volumeNotConfirmed": "Volume Not Confirmed"
   }
 }
 
