fix: Internationalize ML Prediction and Claude Analysis panels
- Add comprehensive i18n translations for panels (en.json, tr.json)
- Update MLPredictionPanel to use t() function
- Update ClaudeAnalysisPanel to use t() function
- Fix hardcoded Turkish texts in page.tsx
- All panel texts now respect selected language

--- a/frontend/lib/i18n/translations/en.json
+++ b/frontend/lib/i18n/translations/en.json
@@ -297,6 +297,100 @@
     "volatility": "Volatility",
     "volumeConfirmed": "Volume Confirmed",
     "volumeNotConfirmed": "Volume Not Confirmed"
+  },
+  "panels": {
+    "aiPrediction": "AI Prediction Panels",
+    "fullScreenView": "Full Screen View",
+    "trading": "Trading"
+  },
+  "mlPrediction": {
+    "title": "ML PREDICTION",
+    "guide": "ML Prediction Guide",
+    "buy": "BUY",
+    "sell": "SELL",
+    "hold": "HOLD",
+    "confidence": "Confidence",
+    "entry": "Entry",
+    "target": "Target",
+    "stopLoss": "Stop Loss",
+    "modelScore": "Model Score",
+    "trendScore": "Trend Score",
+    "volatilityScore": "Volatility Score",
+    "momentumScore": "Momentum Score",
+    "guideText1": "This panel uses machine learning models to predict price direction.",
+    "guideText2": "BUY: Model predicts upward movement",
+    "guideText3": "SELL: Model predicts downward movement",
+    "guideText4": "HOLD: No clear signal, wait for better opportunity",
+    "guideText5": "Higher confidence = stronger signal",
+    "pips": "pips",
+    "noData": "No prediction data available",
+    "loading": "Loading prediction..."
+  },
+  "claudeAnalysis": {
+    "title": "CLAUDE AI ANALYSIS",
+    "analyze": "Analyze",
+    "analyzing": "Analyzing...",
+    "refresh": "Refresh",
+    "ready": "Claude AI analysis ready",
+    "apiSaving": "Analysis runs on button click to save API calls",
+    "agreement": "AGREED",
+    "disagreement": "DIFFERENT VIEW",
+    "mlDecision": "ML Decision",
+    "claudeDecision": "Claude Decision",
+    "reasoning": "Reasoning",
+    "riskAssessment": "Risk Assessment",
+    "marketContext": "Market Context",
+    "recommendation": "Recommendation",
+    "showMore": "Show More",
+    "showLess": "Show Less",
+    "error": "Failed to get Claude analysis"
+  },
+  "orderBlock": {
+    "title": "ORDER BLOCK DETECTOR",
+    "bullish": "Bullish OB",
+    "bearish": "Bearish OB",
+    "score": "Score",
+    "choch": "CHoCH",
+    "bos": "BOS",
+    "fvg": "FVG",
+    "fibLevel": "Fib Level",
+    "zone": "Zone",
+    "noBlocks": "No order blocks detected",
+    "activeSignals": "Active Entry Signals",
+    "combinedSignal": "Combined Signal",
+    "loading": "Detecting order blocks..."
+  },
+  "rhythmDetector": {
+    "title": "RHYTHM DETECTOR",
+    "patternType": "Pattern Type",
+    "dominantPeriod": "Dominant Period",
+    "confidence": "Confidence",
+    "regularity": "Regularity",
+    "amplitude": "Amplitude",
+    "direction": "Direction",
+    "shouldTrade": "Should Trade",
+    "predictions": "Predictions",
+    "seconds": "seconds",
+    "noRhythm": "No rhythm detected",
+    "loading": "Detecting rhythm...",
+    "yes": "Yes",
+    "no": "No"
+  },
+  "directions": {
+    "buy": "BUY",
+    "sell": "SELL",
+    "hold": "HOLD"
+  },
+  "learning": {
+    "title": "Learning Dashboard",
+    "totalPredictions": "Total Predictions",
+    "lastDays": "Last {days} days",
+    "recentPredictions": "Recent Predictions",
+    "targetSuccess": "Target Level Success Rate",
+    "targets": "Targets",
+    "stopLoss": "SL",
+    "totalAnalyzed": "Total {count} analyzed",
+    "check": "check"
   }
 }
 
