--- a/frontend/lib/i18n/translations/tr.json
+++ b/frontend/lib/i18n/translations/tr.json
@@ -297,6 +297,100 @@
     "volatility": "Volatilite",
     "volumeConfirmed": "Hacim Onaylı",
     "volumeNotConfirmed": "Hacim Onaysız"
+  },
+  "panels": {
+    "aiPrediction": "AI Tahmin Panelleri",
+    "fullScreenView": "Tam Ekran Görünüm",
+    "trading": "Trading"
+  },
+  "mlPrediction": {
+    "title": "ML TAHMİN",
+    "guide": "ML Tahmin Rehberi",
+    "buy": "ALIŞ",
+    "sell": "SATIŞ",
+    "hold": "BEKLE",
+    "confidence": "Güven",
+    "entry": "Giriş",
+    "target": "Hedef",
+    "stopLoss": "Zarar Durdur",
+    "modelScore": "Model Skoru",
+    "trendScore": "Trend Skoru",
+    "volatilityScore": "Volatilite Skoru",
+    "momentumScore": "Momentum Skoru",
+    "guideText1": "Bu panel fiyat yönünü tahmin etmek için makine öğrenimi modelleri kullanır.",
+    "guideText2": "ALIŞ: Model yukarı yönlü hareket tahmin ediyor",
+    "guideText3": "SATIŞ: Model aşağı yönlü hareket tahmin ediyor",
+    "guideText4": "BEKLE: Net sinyal yok, daha iyi fırsat bekleyin",
+    "guideText5": "Yüksek güven = daha güçlü sinyal",
+    "pips": "pip",
+    "noData": "Tahmin verisi mevcut değil",
+    "loading": "Tahmin yükleniyor..."
+  },
+  "claudeAnalysis": {
+    "title": "CLAUDE AI ANALİZ",
+    "analyze": "Analiz Et",
+    "analyzing": "Analiz...",
+    "refresh": "Yenile",
+    "ready": "Claude AI analizi hazır",
+    "apiSaving": "API tasarrufu için analiz butona basınca çalışır",
+    "agreement": "MUTABIK",
+    "disagreement": "FARKLI GÖRÜŞ",
+    "mlDecision": "ML Kararı",
+    "claudeDecision": "Claude Kararı",
+    "reasoning": "Gerekçe",
+    "riskAssessment": "Risk Değerlendirmesi",
+    "marketContext": "Piyasa Bağlamı",
+    "recommendation": "Öneri",
+    "showMore": "Daha Fazla",
+    "showLess": "Daha Az",
+    "error": "Claude analiz verisi alınamadı"
+  },
+  "orderBlock": {
+    "title": "ORDER BLOCK DEDEKTÖRÜ",
+    "bullish": "Yükseliş OB",
+    "bearish": "Düşüş OB",
+    "score": "Skor",
+    "choch": "CHoCH",
+    "bos": "BOS",
+    "fvg": "FVG",
+    "fibLevel": "Fib Seviyesi",
+    "zone": "Bölge",
+    "noBlocks": "Order block tespit edilmedi",
+    "activeSignals": "Aktif Giriş Sinyalleri",
+    "combinedSignal": "Birleşik Sinyal",
+    "loading": "Order block tespit ediliyor..."
+  },
+  "rhythmDetector": {
+    "title": "RİTİM DEDEKTÖRÜ",
+    "patternType": "Desen Tipi",
+    "dominantPeriod": "Baskın Periyot",
+    "confidence": "Güven",
+    "regularity": "Düzenlilik",
+    "amplitude": "Genlik",
+    "direction": "Yön",
+    "shouldTrade": "İşlem Yapılmalı",
+    "predictions": "Tahminler",
+    "seconds": "saniye",
+    "noRhythm": "Ritim tespit edilmedi",
+    "loading": "Ritim tespit ediliyor...",
+    "yes": "Evet",
+    "no": "Hayır"
+  },
+  "directions": {
+    "buy": "ALIŞ",
+    "sell": "SATIŞ",
+    "hold": "BEKLE"
+  },
+  "learning": {
+    "title": "Öğrenme Paneli",
+    "totalPredictions": "Toplam Tahmin",
+    "lastDays": "Son {days} gün",
+    "recentPredictions": "Son Tahminler",
+    "targetSuccess": "Hedef Seviyeleri Başarı Oranı",
+    "targets": "Hedefler",
+    "stopLoss": "SL",
+    "totalAnalyzed": "Toplam {count} analiz",
+    "check": "kontrol"
   }
 }
 
